@@ -2,9 +2,12 @@ package com.friendlypoker.engine.engine.pot;
 
 import com.friendlypoker.engine.domain.model.PlayerState;
 import com.friendlypoker.engine.domain.model.SidePot;
-import com.friendlypoker.engine.domain.model.enums.PlayerStatus;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 public final class PotCalculator {
@@ -20,55 +23,41 @@ public final class PotCalculator {
             return List.of();
         }
 
-        List<SidePot> pots = new ArrayList<>();
-        int remainder = 0;
-        Set<String> remaining = bettors.stream()
-                .map(PlayerState::id)
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-
-        while (!bettors.isEmpty()) {
-            PlayerState lowestBettor = bettors.get(0);
-            int level = lowestBettor.totalBet();
-            if (level == 0) {
-                bettors.remove(0);
-                remaining.remove(lowestBettor.id());
-                continue;
-            }
-            int potAmount = 0;
-            for (PlayerState p : bettors) {
-                potAmount += Math.min(p.totalBet(), level);
-            }
-
-            Set<String> eligible = bettors.stream()
-                    .filter(p -> p.status().isInHand() || p.status() == PlayerStatus.ALL_IN)
+        boolean hasAllIn = bettors.stream().anyMatch(p -> p.status() == com.friendlypoker.engine.domain.model.enums.PlayerStatus.ALL_IN);
+        if (!hasAllIn) {
+            int total = bettors.stream().mapToInt(PlayerState::totalBet).sum();
+            Set<String> eligible = players.stream()
+                    .filter(p -> p.status().isInHand())
                     .map(PlayerState::id)
-                    .collect(Collectors.toSet());
-
-            boolean anyAllInAtLevel = bettors.stream()
-                    .anyMatch(p -> p.totalBet() == level && p.status() == PlayerStatus.ALL_IN);
-
-            if (anyAllInAtLevel || bettors.size() == 1) {
-                pots.add(new SidePot(potAmount, eligible));
-            } else {
-                remainder += potAmount;
-            }
-
-            List<PlayerState> next = new ArrayList<>();
-            for (PlayerState p : bettors) {
-                int reduced = p.totalBet() - level;
-                if (reduced > 0) {
-                    next.add(p.withTotalBet(reduced));
-                } else {
-                    remaining.remove(p.id());
-                }
-            }
-            bettors = next;
+                    .collect(Collectors.toCollection(LinkedHashSet::new));
+            return List.of(new SidePot(total, eligible));
         }
 
-        if (remainder > 0 && !remaining.isEmpty()) {
-            pots.add(new SidePot(remainder, remaining));
+        List<SidePot> pots = new ArrayList<>();
+        List<PlayerState> remaining = new ArrayList<>(bettors);
+        int previousLevel = 0;
+
+        while (!remaining.isEmpty()) {
+            int level = remaining.stream()
+                    .mapToInt(PlayerState::totalBet)
+                    .min()
+                    .orElseThrow();
+
+            int potAmount = (level - previousLevel) * remaining.size();
+            Set<String> eligible = remaining.stream()
+                    .filter(p -> p.status().isInHand())
+                    .map(PlayerState::id)
+                    .collect(Collectors.toCollection(LinkedHashSet::new));
+
+            pots.add(new SidePot(potAmount, eligible));
+            previousLevel = level;
+
+            final int cutoff = level;
+            remaining = remaining.stream()
+                    .filter(p -> p.totalBet() > cutoff)
+                    .collect(Collectors.toList());
         }
 
-        return Collections.unmodifiableList(pots);
+        return List.copyOf(pots);
     }
 }
